Add purge endpoint to delete all data tables; update OpenAPI documentation
